fix: Dockerfile and docker compose Now can run tg bot from container

--- a/client/telegram/Dockerfile
+++ b/client/telegram/Dockerfile
@@ -6,8 +6,8 @@ COPY requirements.txt .
 
 RUN pip install --no-cache-dir -r requirements.txt
 
-ENV PYTHONPATH="${PYTHONPATH}:/app"
+ENV PYTHONPATH="${PYTHONPATH}:/"
 
-COPY . .
+COPY app .
 
 CMD ["python", "main.py"]
